deploy/projects/accountmicroservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accountmicroservice-deployment
  labels:
    app: accountmicroservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accountmicroservice
  template:
    metadata:
      labels:
        app: accountmicroservice
    spec:
      serviceAccountName: dbmigration-account
      containers:
        - name: accountmicroservice
          image: mrtech12/beavergoose-accountmicroservice:release-1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
