deploy/projects/apigateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
  labels:
    app: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: mrtech12/apigateway:release-1.0.0
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "128m"
            limits:
              memory: "512Mi"
              cpu: "256m"
