deploy/projects/filemicroservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filemicroservice-deployment
  labels:
    app: filemicroservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filemicroservice
  template:
    metadata:
      labels:
        app: filemicroservice
    spec:
      containers:
        - name: filemicroservice
          image: mrtech12/filemicroservice:release-1.0.0
          ports:
            - containerPort: 6000
          resources:
            requests:
              memory: "128Mi"
              cpu: "128m"
            limits:
              memory: "640Mi"
              cpu: "256m"
