deploy/projects/linkmicroservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkmicroservice-deployment
  labels:
    app: linkmicroservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: linkmicroservice
  template:
    metadata:
      labels:
        app: linkmicroservice
    spec:
      serviceAccountName: dbmigration-account
      containers:
        - name: linkmicroservice
          image: mrtech12/beavergoose-linkmicroservice:release-1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 7000
          resources:
            requests:
              memory: "128Mi"
              cpu: "128m"
            limits:
              memory: "512Mi"
              cpu: "256m"
