deploy/projects/accountmicroservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: accountmicroservice-service
spec:
  selector:
    app: accountmicroservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
