deploy/projects/apigateway-ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
spec:
  rules:
  - http:
      paths:
      - path: /gateway/*
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 80
